# elf_calorie

./: CMakeLists.txt  Makefile  a.out  codlar  sayilar.txt
src/: main.cpp
